Fully fixed scrollbar

--- a/css/404.css
+++ b/css/404.css
@@ -1,5 +1,5 @@
 main {
-  width: 100vw;
+  width: 100%;
   height: 90vh;
   min-height: 500pt;
   background: var(--main-gradient);
